# RekordBuddy

./: .gitignore  CMakeLists.txt
Collections/RekordBuddy/: CMakeLists.txt
Collections/RekordBuddy/Include/RekordBuddyCollection/: Artist.hpp  Collection.hpp  RekordBuddy.hpp  UserPreferences.hpp
Collections/RekordBuddy/Objects/: Collection.cpp  RekordBuddy.cpp  UserPreferences.cpp
Collections/RekordBuddy/Objects/Crates/: FilterPlaylist.cpp  Folder.cpp  FolderClone.cpp  OtherTracksPlaylist.cpp  Playlist.cpp  PlaylistClone.cpp  SmartPlaylist.cpp  SmartPlaylistClone.cpp  SortingPlaylist.cpp
Collections/RekordBuddy/Objects/Implementation/: Artist.cpp  Collection.cpp
Collections/RekordBuddy/Objects/Persistence/: CMakeLists.txt
Collections/RekordBuddy/Objects/Tracks/: Tag.cpp  Track.cpp
Collections/RekordBuddy/Tests/: CMakeLists.txt  Test.hpp  UserPreferencesTests.hpp
Collections/RekordBuddy/Tests/Implementation/: CMakeLists.txt
Collections/RekordBuddy/Tests/Tracks/: TrackTests.cpp
Collections/Serato/: CMakeLists.txt
Collections/Serato/Include/SeratoCollection/: Collection.hpp  Serato.hpp
Collections/Serato/Objects/: Collection.cpp  Serato.cpp
Collections/Serato/Objects/Crates/: AllTracksPlaylist.cpp  Folder.cpp  Playlist.cpp
Collections/Serato/Objects/Implementation/: CMakeLists.txt
Collections/Serato/Objects/Markers/: CueMarker.cpp  GridMarker.cpp  LoopMarker.cpp
Collections/Serato/Objects/Tracks/: Track.cpp
Collections/Serato/Tests/: CMakeLists.txt  CrateTests.cpp  TrackEntryTests.cpp
Collections/Serato/Tests/Markers/: CueMarkerTests.cpp  LoopMarkerTests.cpp
Collections/Serato/Tests/Tags/: BlobTagTests.cpp  BooleanTagTests.cpp  ObjectTagTests.cpp  ObjectTagTests.hpp  PathTagTests.cpp  TagTests.cpp  TextTagTests.cpp  UInteger16TagTests.cpp  UInteger32TagTests.cpp  VersionTagTests.cpp
Collections/Serato/Tests/Tracks/: TrackTests.cpp  TrackTests.hpp
UI/: CMakeLists.txt  Fonts.qrc  Icons.qrc  Rekord Buddy Beta.icns  Rekord Buddy.icns  RekordBuddy.plist.in  main.cpp  splash.qrc  style.qss  windows_metafile.rc.in
UI/AbstractViewCollection/: CMakeLists.txt
UI/AbstractViewCollection/Objects/Predicate/: AbstractDateItem.cpp  AbstractEnumerationItem.cpp  AbstractGroupItem.cpp  AbstractNumberItem.cpp  AbstractPredicateItem.cpp  AbstractStringItem.cpp  AbstractTagItem.cpp
UI/AbstractViewCollection/Objects/Sidebar/: AbstractCollection.cpp  AbstractCollectionList.cpp  AbstractCrateItem.cpp  SidebarItem.cpp
UI/AbstractViewCollection/Objects/TrackList/: AbstractTrackItem.cpp
UI/MutableViewCollection/: CMakeLists.txt
UI/MutableViewCollection/Objects/Predicate/: MutableDateItem.cpp  MutableEnumerationItem.cpp  MutableGroupItem.cpp  MutableNumberItem.cpp  MutableStringItem.cpp  MutableTagItem.cpp
UI/MutableViewCollection/Objects/Sidebar/: MutableAllTracksHeader.cpp  MutableAllTracksItem.cpp  MutableArtistItem.cpp  MutableArtistsHeader.cpp  MutableCollectionList.cpp  MutableFolderItem.cpp  MutableKeyItem.cpp  MutableKeysHeader.cpp  MutablePlaylistItem.cpp  MutablePlaylistsHeader.cpp  MutableSmartPlaylistItem.cpp  MutableTagsHeader.cpp  MutableTrackTagItem.cpp  MutableViewCollection.cpp
UI/MutableViewCollection/Objects/TrackList/: MutableTrackItem.cpp  MutableTrackListNode.cpp
UI/RkbBuildDefines/: CMakeLists.txt
UI/UiBase/: CMakeLists.txt
UI/UiBase/Include/UiBase/: AlertMessageBox.hpp  InternalItemReference.hpp  Types.hpp  variantInterop.hpp
UI/UiBase/Objects/: AlertMessageBox.cpp  AlertMessageBox.ui
UI/UiMainWindow/: CMakeLists.txt
UI/UiMainWindow/Include/UiMainWindow/: AboutDialog.hpp  BaseRuleWidget.hpp  BetaSoftwareWarning.hpp  DateMatchWidget.hpp  EnumerationMatchWidget.hpp  MainWindow.hpp  MultiValueEditor.hpp  NewCollectionDialog.hpp  NumberMatchWidget.hpp  PredicateEditorDialog.hpp  PredicateWidget.hpp  RuleGroupWidget.hpp  RuleWidget.hpp  StringMatchWidget.hpp  TagMatchWidget.hpp  TrackEditDialog.hpp  WelcomeDialog.hpp
UI/UiMainWindow/Objects/: AboutDialog.cpp  AboutDialog.ui  BetaSoftwareWarning.cpp  BetaSoftwareWarning.ui  DateMatchWidget.cpp  EnumerationMatchWidget.cpp  MainWindow.cpp  MainWindow.ui  MultiValueEditor.cpp  MultiValueEditor.ui  NewCollectionDialog.cpp  NewCollectionDialog.ui  NumberMatchWidget.cpp  PredicateEditorDialog.cpp  PredicateWidget.cpp  RuleGroupWidget.cpp  RuleWidget.cpp  StringMatchWidget.cpp  TagMatchWidget.cpp  TrackEditDialog.cpp  TrackEditDialog.ui  WelcomeDialog.cpp  WelcomeDialog.ui
UI/UiModel/: CMakeLists.txt
UI/UiModel/Include/UiModel/: PreferencesCategoryModel.hpp  RuleListModel.hpp  SidebarModel.hpp  TrackListAlbumModel.hpp  TrackListDetailsModel.hpp  TrackListModel.hpp  TrackListSortingModel.hpp
UI/UiModel/Objects/: PreferencesCategoryModel.cpp  RuleListModel.cpp  SidebarModel.cpp  TrackListDetailsModel.cpp  TracklistAlbumModel.cpp  TracklistModel.cpp
UI/UiModel/Objects/Preferences/: PreferencesModuleManager.cpp
UI/UiPreferences/: CMakeLists.txt
UI/UiPreferences/Include/UiPreferences/: PreferencesWindow.hpp  (+4 more)
UI/UiPreferences/Objects/: PreferencesCategoryGeneral.cpp  PreferencesCategoryRekordbox.cpp  PreferencesCategorySerato.cpp  PreferencesCategoryTraktor.cpp  PreferencesGeneralPanel.ui  PreferencesRekordboxPanel.ui  PreferencesSeratoPanel.ui  PreferencesTraktorPanel.ui  PreferencesWindow.cpp  PreferencesWindow.ui
UI/UiUpdater/: CMakeLists.txt
UI/UiUpdater/Objects/: UpdaterMacOS.mm  UpdaterWindows.cpp
UI/ViewCollection/: CMakeLists.txt
UI/Widgets/: CMakeLists.txt
UI/Widgets/Objects/: ArtworkTrackViewDelegate.cpp  ClickableColor.cpp  ColorEditor.cpp  ColorEditor.ui  ConfirmationMessageBox.cpp  ConfirmationMessageBox.ui  DetailsTrackViewDelegate.cpp  DurationViewer.cpp  FlowLayout.cpp  ImageBrowser.cpp  ImageBrowser.ui  PlayerWidget.cpp  PlayerWidget.ui  ProgressWidget.cpp  ProgressWidget.ui  RatingEditor.cpp  RatingEditor.ui  SidebarView.cpp  TagChildWidget.cpp  TagWidget.cpp  TrackListDetailsView.cpp
UI/WorkQueue/: CMakeLists.txt
UI/WorkQueue/WorkQueue/: Job.cpp  Job.hpp  WorkQueue.cpp  WorkQueue.hpp  Worker.cpp  Worker.hpp
UI/rc/Splash/: Acknowledgements.htm
(+459 files in other folders)
